--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:IndigoUnited/node-happening.git"
+    "url": "git://github.com/IndigoUnited/node-happening.git"
   },
   "keywords": [
     "event",
