--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Distributed network-based event emitter",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha -R spec"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
-    "async": "~0.1.22"
+    "async": "~0.1.22",
+    "mocha": "~1.11.0"
   }
 }
