--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Distributed network-based event emitter",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
